--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-<h1> Test titre </h1>
+<!DOCTYPE html>
+<html lang="fr">
+<meta charset="UTF-8">
+<title>Page Title</title>
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<link rel="stylesheet" href="stylesheet.css">
+
+<body>
+
+    <img src="image-de-petit-chat-mignon.jpg" alt="petit_chat" style="width:100%">
+
+    <div class="">
+        <h1>This is a Heading</h1>
+        <p>This is a paragraph.</p>
+        <p>This is another paragraph.</p>
+    </div>
+
+</body>
+
+</html>
