--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <img src="image-de-petit-chat-mignon.jpg" alt="petit_chat" style="width:100%">
 
     <div class="">
-        <h1>This is a Heading</h1>
-        <p>This is a paragraph.</p>
-        <p>This is another paragraph.</p>
+        <h1>Prend moi du tabac en revenant stp</h1>
+        <p>Malboro red</p>
+        <p>Cimer</p>
     </div>
 
 </body>
