--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <meta charset="UTF-8">
 <title>Page Title</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<link rel="stylesheet" href="stylesheet.css">
+<link rel="stylesheet" href="assests/stylesheet.css">
 
 <body>
 
-    <img src="image-de-petit-chat-mignon.jpg" alt="petit_chat" style="width:100%">
+    <img src="https://giphy.com/gifs/TikTokFrance-cat-chat-mignon-h2ZLlwv2NKFcw9oZ5Y" alt="petit_chat">
 
     <div class="">
         <h1>Prend moi du tabac en revenant stp</h1>
