--- a/index.html
+++ b/index.html
@@ -1,19 +1,31 @@
 <!DOCTYPE html>
 <html lang="fr">
-<meta charset="UTF-8">
-<title>Page Title</title>
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<link rel="stylesheet" href="assests/stylesheet.css">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="stylesheet" href="assests/stylesheet.css">
+    <title>ESPANA Pierre</title>
+</head>
+
+
 
 <body>
-
-    <img src="https://giphy.com/gifs/TikTokFrance-cat-chat-mignon-h2ZLlwv2NKFcw9oZ5Y" alt="petit_chat">
-
-    <div class="">
-        <h1>Prend moi du tabac en revenant stp</h1>
-        <p>Malboro red</p>
-        <p>Cimer</p>
+    <div id="navbar">
+        <a href="#" class="logo">ici</a>
     </div>
+
+    <section>
+        <header>
+            <img src="https://giphy.com/gifs/TikTokFrance-cat-chat-mignon-h2ZLlwv2NKFcw9oZ5Y" alt="pfp">
+            <h1>h1 ici</h1>
+            <h3>h3 là</h3>
+        </header>
+    </section>
+    <footer>
+        <p> paragraphe footer </p>
+    </footer>
 
 </body>
 
