--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="stylesheet" href="assests/stylesheet.css">
+    <link rel="stylesheet" href="assets/stylesheet.css">
     <title>ESPANA Pierre</title>
 </head>
 
