--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <section>
         <header>
-            <img src="https://tenor.com/view/cat-bag-mcdonalds-kitten-kitty-gif-16586173" alt="pfp">
+            <img src="https://tenor.com/view/cat-bag-mcdonalds-kitten-kitty-gif-16586173.gif" alt="pfp">
             <h1>h1 ici</h1>
             <h3>h3 là</h3>
         </header>
